# hlpr_perception

./: .change_pcl_version.sh  .travis.yml  .travis.yml.swp  LICENSE  README.md  change_pcl_version.sh  tatus
hlpr_audio_features/: CMakeLists.txt  package.xml  setup.py
hlpr_audio_features/scripts/: mini_dsp_vad_doa.py
hlpr_color_object_labeler/: CMakeLists.txt  README.md  package.xml  setup.py
hlpr_color_object_labeler/config/objects/: drawer.yaml  large_bowl.yaml  pitcher.yaml  small_bowl.yaml  spoon.yaml  test.yaml
hlpr_color_object_labeler/config/tasks/: bowl_task.yaml  drawer_task.yaml  lamp_task.yaml  pitcher_task.yaml  tasks.yaml  test_task.yaml
hlpr_color_object_labeler/launch/: object_labeler.launch  object_viz.launch
hlpr_color_object_labeler/scripts/: hsv_vol_plot.py
hlpr_color_object_labeler/src/hlpr_color_object_labeler/: hsv_utils.py  object_filters.py  object_labeler.py  object_tf.py  object_viz.py
hlpr_face_detection/: CMakeLists.txt  README.md  package.xml  setup.py
hlpr_feature_extraction/: CMakeLists.txt  CMakeLists.txt~  package.xml
hlpr_feature_extraction/feature_extraction/: CMakeLists.txt  package.xml
hlpr_feature_extraction/feature_extraction/include/: PcFeatures.h  cluster_processing.hpp  rotcalipers.h  utils.hpp  utils_pcl_ros.hpp
hlpr_feature_extraction/feature_extraction/launch/: ft_ex.launch  no_viz.launch
hlpr_feature_extraction/feature_extraction/msg/: PcFeatureArray.msg  PcFeatures.msg
hlpr_feature_extraction/feature_extraction/src/: cluster_processing.cpp  feature_extraction.cpp  utils.cpp  utils_pcl_ros.cpp
hlpr_feature_extraction/include/: cluster_processing.hpp  misc_structures.hpp  objectFeatures.hpp  utils_pcl_ros.hpp
hlpr_feature_extraction/launch/: dist_no_viz.launch  hue_no_viz.launch  no_viz.launch  viz.launch
hlpr_feature_extraction/src/: cluster_processing.cpp  feature_extraction.cpp  rotcalipers.cpp  utils.cpp  utils_pcl_ros.cpp
hlpr_knowledge_retrieval/: CMakeLists.txt  CMakeLists.txt~  package.xml  setup.py
hlpr_knowledge_retrieval/launch/: knowledge_retrieval.launch  object_knowledge_retrieval.launch  perception_pipeline.launch
hlpr_knowledge_retrieval/msg/: ObjectKnowledge.msg  ObjectKnowledgeArray.msg
hlpr_knowledge_retrieval/src/: object_knowledge_retrieval.py  old_object_knowledge_retreival.py
hlpr_nonplanar_feature_extraction/: CMakeLists.txt  package.xml
hlpr_nonplanar_feature_extraction/include/: k2g.h  k2pcl_light.h  misc_structures.hpp  objectFeatures.hpp  utils.hpp  utils_pcl_ros.hpp
hlpr_nonplanar_feature_extraction/launch/: nonplanar_ft_ex.launch
hlpr_nonplanar_feature_extraction/msg/: ShapeHist.msg  ViewpointHist.msg
hlpr_nonplanar_feature_extraction/src/: cluster_processing.cpp  feature_extraction.cpp  rotcalipers.cpp  utils.cpp  utils_pcl_ros.cpp
hlpr_nonplanar_segmentation/: CMakeLists.txt  package.xml
hlpr_nonplanar_segmentation/include/: k2g.h  rgb_euclidean_comparator.h  utils.hpp
hlpr_nonplanar_segmentation/launch/: debug.launch  no_viz.launch  no_viz.launch~  nonplanar_seg.launch  nonplanar_seg.launch~
hlpr_nonplanar_segmentation/msg/: NonPlanarSegClusters.msg  SegPlanes.msg
hlpr_nonplanar_segmentation/src/: pc_segmentation.cpp  segmentation.cpp  utils_pcl_ros.cpp
hlpr_object_labeling/: CMakeLists.txt  CMakeLists.txt~  package.xml  setup.py~
hlpr_object_labeling/launch/: object_labeling.launch  object_recording.launch
hlpr_object_labeling/msg/: LabeledObjects.msg
hlpr_object_labeling/src/: object_labeling.py  object_recording.py
hlpr_perception/: CMakeLists.txt  package.xml
hlpr_perception_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml
hlpr_perception_msgs/msg/: BasicFeatures.msg  ColorHist.msg  ObjectFeatures.msg  OtherFeatures.msg  PlaneFeatures.msg  SegClusters.msg~
hlpr_segmentation/: CMakeLists.txt  package.xml
hlpr_segmentation/include/: pc_segmentation.hpp  utils.hpp
hlpr_segmentation/launch/: debug.launch  hello_world.launch  hello_world.launch~  no_viz.launch  pc_seg.launch  rosbag.launch
hlpr_segmentation/planar_segmentation/: CMakeLists.txt  package.xml
hlpr_segmentation/planar_segmentation/include/: pc_segmentation.hpp  utils_pcl_ros.hpp
hlpr_segmentation/planar_segmentation/launch/: debug.launch  hello_world.launch
hlpr_segmentation/planar_segmentation/msg/: ClusterIndex.msg  SegmentedClusters.msg
hlpr_segmentation/planar_segmentation/src/: pc_segmentation.cpp  segmentation.cpp
hlpr_segmentation/src/: pc_segmentation.cpp  segmentation.cpp  segmentation.cpp~  utils_pcl_ros.cpp
hlpr_single_plane_segmentation/: CMakeLists.txt  CMakeLists.txt~  package.xml
hlpr_single_plane_segmentation/include/: common.hpp  pc_segmentation.hpp~
hlpr_single_plane_segmentation/launch/: hello_world.launch  hello_world.launch~  no_viz.launch  rosbag.launch  segmentation_sim.launch
hlpr_single_plane_segmentation/msg/: SegmentedClusters.msg
hlpr_single_plane_segmentation/src/: pc_segmentation.cpp  pc_segmentation.cpp~  segmentation.cpp  segmentation.cpp~  utils.cpp
hlpr_visual_features/: CMakeLists.txt  package.xml  setup.py
nonplanar_perception/: README.md
nonplanar_perception/nonplanar_feature_extraction/: CMakeLists.txt  CMakeLists.txt~  package.xml
nonplanar_perception/nonplanar_feature_extraction/include/: cluster_processing.hpp  cluster_processing.hpp~  ircpHandler.hpp  objectFeatures.hpp  objectFeatures.hpp~  rgb_euclidean_comparator.h  utils.hpp  utils.hpp~  utils_pcl_ros.hpp  utils_pcl_ros.hpp~
nonplanar_perception/nonplanar_feature_extraction/launch/: handoff_ft_ex.launch~  nonplanar_ft_ex.launch  nonplanar_ft_ex.launch~
nonplanar_perception/nonplanar_feature_extraction/msg/: ExtractedFeaturesArray.msg  ExtractedFeaturesArray.msg~  ObjectFeatures.msg  ObjectFeatures.msg~  OrientedBoundingBox.msg  PlaneFeatures.msg  PlaneFeatures.msg~  Untitled Document 1  Untitled Document 1~
nonplanar_perception/nonplanar_feature_extraction/src/: cluster_processing.cpp  cluster_processing.cpp~  feature_extraction.cpp  feature_extraction.cpp~  utils.cpp~  utils_pcl_ros.cpp  utils_pcl_ros.cpp~
(+24 files in other folders)
