<package format="2">
  <name>hlpr_nonplanar_segmentation</name>
  <version>0.0.1</version>
  <description>Object segmentation</description>
  <maintainer email="priyanka.khante@utexas.edu">Priyanka Khante</maintainer>
  <license>TBD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- depend>dynamic_reconfigure</depend -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>hlpr_perception_msgs</depend>
</package>
