<package format="2">
  <name>hlpr_perception_msgs</name>
  <version>0.0.1</version>
  <description>The hlpr_perception_msgs package</description>

  <author email="priyanka.khante@utexas.edu">Priyanka Khante</author>
  <maintainer email="priyanka.khante@utexas.edu">Priyanka Khante</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <!--<depend>roscpp</depend>-->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
