<package format="2">
  <name>nonplanar_feature_extraction</name>
  <version>0.0.1</version>
  <description>Feature Extraction</description>
  <maintainer email="priyanka.khante@utexas.edu">Priyanka Khante</maintainer>
  <license>TBD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- depend>dynamic_reconfigure</depend -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
